@@ -5,7 +5,6 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -15,23 +14,24 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtTokenProvider jwtTokenProvider;
+
     public JwtAuthenticationFilter(JwtTokenProvider jwtTokenProvider) {
         this.jwtTokenProvider = jwtTokenProvider;
     }
+
     private final AntPathMatcher pathMatcher = new AntPathMatcher();
 
-    // 공개 엔드포인트(필터 스킵 목록)
+    // 공개 엔드포인트(컨텍스트 경로 제거 후 매칭)
     private static final String[] WHITELIST = {
-            "/api/v1/users/signup",
-            "/api/v1/auth/login",
-            "/api/v1/auth/refresh",
+            "/v1/users/signup",
+            "/v1/auth/login",
+            "/v1/auth/refresh",
             // Swagger/OpenAPI
             "/swagger-ui.html",
             "/swagger-ui/**",
@@ -39,16 +39,16 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             "/api-docs/**",
             "/swagger-resources/**",
             "/webjars/**",
+            // WebSocket
             "/ws/**"
     };
 
-    // 공개 엔드포인트는 필터링 건너뛰기
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
-        String ctx = request.getContextPath();              // "/api"
-        String path = request.getRequestURI();
+        String ctx = request.getContextPath();   // 보통 "/api"
+        String path = request.getRequestURI();   // 예: "/api/v1/auth/login"
         if (ctx != null && !ctx.isEmpty() && path.startsWith(ctx)) {
-            path = path.substring(ctx.length());            // "/swagger-ui.html" 처럼 변환
+            path = path.substring(ctx.length()); // "/v1/auth/login"
         }
         for (String pattern : WHITELIST) {
             if (pathMatcher.match(pattern, path)) return true;
@@ -63,7 +63,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             FilterChain chain
     ) throws ServletException, IOException {
 
-        // ★ 웹소켓 핸드셰이크는 바로 통과
+        // WebSocket 핸드셰이크는 바로 통과
         String uri = request.getRequestURI();
         if (uri != null && uri.startsWith("/ws/")) {
             chain.doFilter(request, response);
@@ -71,31 +71,28 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         try {
-
             String bearer = request.getHeader("Authorization");
             if (StringUtils.hasText(bearer) && bearer.startsWith("Bearer ")) {
                 String token = bearer.substring(7);
 
                 if (jwtTokenProvider.validate(token)) {
-                    // 토큰에서 subject(사용자 식별자), role 추출
-                    String userId = jwtTokenProvider.getUserId(token); // 문자열 또는 Long.toString()
-                    String role   = jwtTokenProvider.getRole(token);   // e.g., "ROLE_USER"
+                    // ✅ role 추출/세팅 제거: 토큰에서 사용자 식별자만 꺼냄
+                    String userId = jwtTokenProvider.getUserId(token); // 문자열 or Long.toString()
 
-                    Collection<? extends GrantedAuthority> authorities = (role != null)
-                            ? List.of(new SimpleGrantedAuthority(role))
-                            : java.util.Collections.emptyList();   // ← null이면 빈 권한
+                    // ✅ 인증만 필요한 정책이면 권한은 기본값 하나만 부여(ROLE_USER)
+                    var authorities = List.of(new SimpleGrantedAuthority("USER"));
+
                     var auth = new UsernamePasswordAuthenticationToken(
-                            userId,               // principal (간단히 userId 사용)
-                            null,                 // credentials
+                            userId,        // principal
+                            null,          // credentials
                             authorities
                     );
                     auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                     SecurityContextHolder.getContext().setAuthentication(auth);
                 }
             }
-        } catch (Exception ex) {
-            // 토큰 에러(만료/변조 등) → 인증 정보 세팅 없이 진행
-            // 필요하면 여기서 401로 바로 응답하거나 로깅하세요.
+        } catch (Exception ignore) {
+            // 토큰 문제면 인증 없이 진행(컨트롤러/시큐리티에서 401/403 처리)
         }
 
         chain.doFilter(request, response);
